Fixes layout issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 }
 
 .weather-card {
-  min-width: 35%;
+  min-width: 60%;
   margin: auto;
   font-size: 1.5rem;
   font-family: 'Cabin', sans-serif;
@@ -50,4 +50,18 @@ form {
 
 #temperature {
   font-size: 5rem;
+}
+
+@media only screen and (max-width: 1000px) {
+  #temperature {
+    font-size: 4rem;
+  }
+
+  #temperature-icon {
+    align-items: center;
+  }
+
+  #search-button {
+    margin-bottom: 7px;
+  }
 }
